# melody

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  synth.rs
